--- a/presentations/cakefest-2024.html
+++ b/presentations/cakefest-2024.html
@@ -210,6 +210,7 @@
                 <h2>&#x26c5;</h2>
             </section>
             <section>
+                <pre>AvatarsViewController.php</pre>
                 <img src="assets/cakefest24/AvatarsViewController.png" height="100%">
                 <aside class="notes">
                     The avatar view controller is responsible for serving the avatar
